Renamed constructor everywhere

--- a/test/functional/ExceptionLab.html
+++ b/test/functional/ExceptionLab.html
@@ -19,7 +19,7 @@
         }
 
         function detectMode() {
-            var p = new printStackTrace.implementation(), mode = p.mode(lastException);
+            var p = new printStackTraceImp(), mode = p.mode(lastException);
             info('Stack tracing mode: ' + mode);
         }
 
