--- a/specRunner.html
+++ b/specRunner.html
@@ -11,7 +11,7 @@
     <script src='node_modules/error-stack-parser/dist/error-stack-parser.js'></script>
     <script src='node_modules/stack-generator/dist/stack-generator.js'></script>
     <script src='node_modules/jasmine-ajax/lib/mock-ajax.js'></script>
-    <script src='stacktrace.js'></script>
+    <script type="module" src='stacktrace.js'></script>
     <script src='spec/fixtures/errors.js'></script>
     <script src='spec/spec-helper.js'></script>
     <script src='spec/stacktrace-spec.js'></script>
